[gd_scene load_steps=20 format=3 uid="uid://71rc8k32st6a"]

[ext_resource type="Script" uid="uid://cged4wdm7o1j0" path="res://scripts/player.gd" id="1_qm0ti"]
[ext_resource type="Texture2D" uid="uid://ceomkl5mknhy0" path="res://ships/03.png" id="2_g2els"]
[ext_resource type="PackedScene" uid="uid://b3eq3han4dkrp" path="res://scenes/projectiles/Plasma.tscn" id="2_qu4a1"]
[ext_resource type="Script" uid="uid://bkne57gikkxc6" path="res://scripts/spawner.gd" id="3_3li8b"]
[ext_resource type="PackedScene" uid="uid://gtbhbm54ufjd" path="res://scenes/projectiles/Teleporter.tscn" id="3_hlp67"]
[ext_resource type="PackedScene" uid="uid://m1cjpvkoeugn" path="res://scenes/gui/Gui.tscn" id="4_mdl7e"]
[ext_resource type="PackedScene" uid="uid://dq44tpy22jtkp" path="res://scenes/ships/Chaser.tscn" id="5_w73tk"]
[ext_resource type="AudioStream" uid="uid://cwrti7833ut7u" path="res://sounds/energy.mp3" id="6_70d11"]
[ext_resource type="PackedScene" uid="uid://dmdbx07uhmqlv" path="res://scenes/gui/CanvasLayer.tscn" id="7_ci04x"]
[ext_resource type="AudioStream" uid="uid://c2xspvdxljwqv" path="res://sounds/exhaust.ogg" id="7_cw2d6"]
[ext_resource type="AudioStream" uid="uid://l1uirt0tkejx" path="res://sounds/damage.mp3" id="8_bruh7"]
[ext_resource type="PackedScene" uid="uid://ui0uuof2k546" path="res://scenes/remnants/Explosion.tscn" id="8_khinc"]
[ext_resource type="PackedScene" uid="uid://db7t1gcea1pas" path="res://scenes/ships/Spiral.tscn" id="8_rd3ux"]
[ext_resource type="PackedScene" uid="uid://eredlaon0bll" path="res://scenes/ships/Wave.tscn" id="9_u4r6o"]
[ext_resource type="Texture2D" uid="uid://canxime7mrlmv" path="res://images/Shield.png" id="13_1wvft"]

[sub_resource type="CircleShape2D" id="CircleShape2D_qu4a1"]
radius = 49.0

[sub_resource type="Gradient" id="Gradient_g2els"]
offsets = PackedFloat32Array(0, 0.116279, 0.530233, 1)
colors = PackedColorArray(1, 0.960784, 1, 0, 1, 1, 0, 1, 1, 0, 0, 1, 0.32, 0.32, 0.32, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_qhqgy"]
gradient = SubResource("Gradient_g2els")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_g2els"]
particle_flag_disable_z = true
emission_shape_scale = Vector3(10, 20, 1)
emission_shape = 1
emission_sphere_radius = 1.0
angle_min = 1.07288e-05
angle_max = 360.0
velocity_pivot = Vector3(10, 0, 0)
direction = Vector3(0, 1, 0)
spread = 20.0
initial_velocity_min = 500.0
initial_velocity_max = 1000.0
angular_velocity_min = -100.0
angular_velocity_max = 100.0
orbit_velocity_min = 9.49949e-08
orbit_velocity_max = 9.49949e-08
radial_velocity_min = -2.23517e-05
radial_velocity_max = 0.999978
gravity = Vector3(0, 0, 0)
damping_min = 1000.0
damping_max = 1000.0
scale_min = 2.0
scale_max = 10.0
color_ramp = SubResource("GradientTexture1D_qhqgy")

[node name="Player" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 2
script = ExtResource("1_qm0ti")
plasma_scene = ExtResource("2_qu4a1")
teleporter_scene = ExtResource("3_hlp67")
metadata/_edit_horizontal_guides_ = [-1030.0]
metadata/_edit_vertical_guides_ = [-1870.0]

[node name="Shield" type="Sprite2D" parent="."]
visible = false
scale = Vector2(0.3, 0.3)
texture = ExtResource("13_1wvft")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource("CircleShape2D_qu4a1")

[node name="Sprite" type="Sprite2D" parent="."]
rotation = 3.14159
scale = Vector2(0.25, 0.25)
texture = ExtResource("2_g2els")

[node name="Shooter" type="Marker2D" parent="Sprite"]
position = Vector2(0, 200)
rotation = -3.14159
scale = Vector2(4, 4)

[node name="ExhaustBackLeft" type="GPUParticles2D" parent="Sprite"]
position = Vector2(172, -132)
rotation = -3.14159
scale = Vector2(4, 4)
emitting = false
amount = 200
lifetime = 0.35
randomness = 1.0
fixed_fps = 120
process_material = SubResource("ParticleProcessMaterial_g2els")

[node name="ExhaustBackRight" type="GPUParticles2D" parent="Sprite"]
position = Vector2(-172, -140)
rotation = -3.14159
scale = Vector2(4, 4)
emitting = false
amount = 200
lifetime = 0.35
randomness = 1.0
fixed_fps = 120
process_material = SubResource("ParticleProcessMaterial_g2els")

[node name="ExhaustSideLeft" type="GPUParticles2D" parent="Sprite"]
position = Vector2(276, 0.00069971)
rotation = -1.57079
scale = Vector2(4, 4)
emitting = false
amount = 200
lifetime = 0.35
randomness = 1.0
fixed_fps = 120
process_material = SubResource("ParticleProcessMaterial_g2els")

[node name="ExhaustSideRight" type="GPUParticles2D" parent="Sprite"]
position = Vector2(-276, -0.00069971)
rotation = 1.5708
scale = Vector2(4, 4)
emitting = false
amount = 200
lifetime = 0.35
randomness = 1.0
fixed_fps = 120
process_material = SubResource("ParticleProcessMaterial_g2els")

[node name="ExhaustFrontLeft" type="GPUParticles2D" parent="Sprite"]
position = Vector2(-180, 120)
scale = Vector2(4, 4)
emitting = false
amount = 200
lifetime = 0.35
randomness = 1.0
fixed_fps = 120
process_material = SubResource("ParticleProcessMaterial_g2els")

[node name="ExhaustFrontRight" type="GPUParticles2D" parent="Sprite"]
position = Vector2(180, 120)
scale = Vector2(4, 4)
emitting = false
amount = 200
lifetime = 0.35
randomness = 1.0
fixed_fps = 120
process_material = SubResource("ParticleProcessMaterial_g2els")

[node name="Spawner" type="Node2D" parent="."]
position = Vector2(-23, -5)
script = ExtResource("3_3li8b")
chaser_scene = ExtResource("5_w73tk")
spiral_scene = ExtResource("8_rd3ux")
wave_scene = ExtResource("9_u4r6o")
endless_enemy_scenes = {}

[node name="Camera" type="Camera2D" parent="."]
position = Vector2(-23, -5)
zoom = Vector2(0.5, 0.5)

[node name="Gui" parent="Camera" instance=ExtResource("4_mdl7e")]
offset_left = -1768.0
offset_top = -1057.0
offset_right = -1768.0
offset_bottom = -1057.0

[node name="CanvasLayer" parent="Camera" instance=ExtResource("7_ci04x")]

[node name="EnergyAudioPlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_70d11")

[node name="ExhaustAudioPlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_cw2d6")

[node name="DamageAudioPlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_bruh7")

[node name="Explosion" parent="." instance=ExtResource("8_khinc")]
